2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

Tue Nov  5 15:48:33 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-info.c: Change the file format a bunch.

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

Fri Nov  1 11:03:34 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-info.[ch]: Moved theme-common, and gave more
	features.

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-07-16  Jody Goldberg <jody@gnome.org>

	* gconf-property-editor.c (gconf_value_int_to_float) : add a peditor
	  arg so that these can be used without wrappers.
	(gconf_value_float_to_int) : ditto.

2002-07-10  Jody Goldberg <jody@gnome.org>

	* capplet-util.c (capplet_set_icon) : look in more places.

2002-07-02  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=86018
	* gconf-property-editor.c (peditor_image_set_filename) : Patch from
	  Chema.  We should only assign the filename to the label if the file
	  is valid.

2002-06-27  Jody Goldberg <jody@gnome.org>

	* capplet-util.c (capplet_set_icon) : new util.

2002-06-21  Stephen Browne <stephen.browne@sun.com>

	* wm-common.[ch] : added new files to expose
	wm_common_get_current_window_manager and 
	wm_common_register_window_manager_change

2002-06-13  Jody Goldberg <jody@gnome.org>

	* capplet-util.c (capplet_help) : Use the new utility.
	(capplet_error_dialog) : split out into a new utility.

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-05-28 Satyajit Kanungo <satyajit.kanungo@wipro.com>

	* capplet-util.c : capplet_help () The Help directory is changed to 
	  user-guide. 		

2002-05-26  Jody Goldberg <jody@gnome.org>

	* capplet-util.c (capplet_help) : new utility.

2002-05-16  jacob berkman  <jacob@ximian.com>

	* gconf-property-editor.c (peditor_image_set_filename): if we