@@ -1,0 +1,9 @@
+static const gchar *theme_header =
+"[Desktop Entry]\n\
+Name=%s\n\
+Type=X-GNOME-Metatheme\n\
+Comment=%s\n\
+Encoding=UTF-8\n\
+\n\
+[X-GNOME-Metatheme]\n\
+";
