@@ -114,7 +114,6 @@
 			<widget class="GtkButton" id="meta_theme_details_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Details...</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 
@@ -160,7 +159,6 @@
 			<widget class="GtkButton" id="meta_theme_install_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Install theme...</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 
@@ -201,7 +199,6 @@
 			<widget class="GtkButton" id="meta_theme_save_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Save theme</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 
@@ -709,7 +706,6 @@ font and background</property>
 			<widget class="GtkButton" id="control_install_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Install theme...</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 
@@ -740,7 +736,6 @@ font and background</property>
 			<widget class="GtkButton" id="control_manage_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Go to theme folder</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 
@@ -907,7 +902,6 @@ font and background</property>
 			<widget class="GtkButton" id="window_install_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Install theme...</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 
@@ -938,7 +932,6 @@ font and background</property>
 			<widget class="GtkButton" id="window_manage_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Go to theme folder</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 
@@ -1105,7 +1098,6 @@ font and background</property>
 			<widget class="GtkButton" id="icon_install_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Install theme...</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 
@@ -1136,7 +1128,6 @@ font and background</property>
 			<widget class="GtkButton" id="icon_manage_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Go to theme folder</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 
