@@ -1,3 +1,8 @@
+Fri Dec  6 16:54:14 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-theme-save-data.c: New file.  Really saves now.  Doesn't
+	notice when a new metatheme is added, though.
+
 Tue Dec  3 20:45:17 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* gnome-theme-save.c: Add saving support.  Almost to a working
