@@ -1,3 +1,8 @@
+Fri Dec  6 16:13:54 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-theme-info.c (top_theme_dir_changed_callback): I know C.
+	Really, I do.
+
 2002-11-23  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.1.3
